# type-class-derivation-in-scala-3

./: README.md  build.sbt
haskell/derivation-examples/: derivation-examples.cabal  package.yaml  stack.yaml
haskell/derivation-examples/src/: Lib.hs
mu-service/: greeter.proto
mu-service/src/main/scala/myapp/: Greeter.scala  Server.scala
mu/src/main/scala/mu/: CallHandlers.scala  GrpcServerSide.scala  ProtobufMarshaller.scala  package.scala  service.scala
rust/derivation-examples/: Cargo.toml
rust/derivation-examples/src/: lib.rs  main.rs
src/main/scala/: Main.scala
src/main/scala/myapp/: Employee.scala  ExprF.scala  Foo.scala  MyList.scala  Person.scala  Pet.scala  Weather.scala
src/main/scala/mylibrary/: Functor.scala  Show.scala
